Using Apache's encoder